@@ -3,6 +3,9 @@ Released on 2019-10-20?
 ======================================
 
 
+bpo-35610: Replace now redundant editor.context_use_ps1 with
+.prompt_last_line.  This finishes change started in bpo-31858.
+
 bpo-32411: Stop sorting dict created with desired line order.
 
 bpo-37038: Make idlelib.run runnable; add test clause.
